--- a/my-app.yml
+++ b/my-app.yml
@@ -37,7 +37,10 @@ kind: Ingress
 metadata:
   name: my-app-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   tls: 
     - hosts:
@@ -46,7 +49,6 @@ spec:
   - host: my-app.test-test.com
     http:
       paths:
-      - path: /
-        backend:
+      - backend:
           serviceName: my-app-service
           servicePort: 443
